css fix 2 consecutive alignleft elements

--- a/grid-parts/styles/content/styles-large.scss
+++ b/grid-parts/styles/content/styles-large.scss
@@ -14,6 +14,10 @@
 
 			&.alignleft {
 				margin-left: calc(50% - var(--gridd-content-max-width-calculated) / 2);
+
+				+.alignleft {
+					margin-left: 0;
+				}
 			}
 
 			&.alignright {
